--- a/htdocs/trac.css
+++ b/htdocs/trac.css
@@ -1,31 +1,33 @@
 body {
- background: #fff;
- margin: 10px;
- padding: 0;
- color: #000;
- font: normal 100% 'Bitstream Vera Sans', Verdana, Helvetica, Arial, sans-serif;
+	background: #fff;
+	margin: 10px;
+	padding: 0;
+	color: #000;
+	font: normal 100% 'Bitstream Vera Sans', Verdana, Helvetica, Arial, sans-serif;
 }
 hr,.hide { display: none; }
 a:link, a:visited, a.noline {
- text-decoration: none;
- color: #b00;
- border-bottom: 1px dotted #bbb;
+	text-decoration: none;
+	color: #b00;
+	border-bottom: 1px dotted #bbb;
 }
-a:hover { 
- color: #b00; 
- background: #f7f7f7;
+a:hover {
+	color: #b00;
+	background: #f7f7f7;
 }
 a.noline { border-bottom: none; }
 address { font-style: normal; }
-img { border: none }
+img { border: none; }
+#browser-rev, #log-hdr,#log-hdr,#timeline-hdr,#chg-hdr {
+	font-size: 110%;
+	margin-right: 1em;
+}
 
-/*
- * Forms 
- */
+/* Forms */
 
-input, textarea, select { 
-  border: 1px solid #ccc;
-  background: #fff;
+input, textarea, select {
+	border: 1px solid #ccc;
+	background: #fff;
 }
 input[type="submit"], input[type="reset"] { background: #eee; }
 input[type="submit"]:hover, input[type="reset"]:hover { background: #ccb; }
@@ -34,170 +36,300 @@ option {  border-bottom: 1px solid #ccc; }
 /* Header */
 
 #header { }
-#hdrlogo,#hdrlogo img,#hdrlogo:hover { 
- background: transparent;
- margin-bottom: -1em;
+#hdrlogo,#hdrlogo img,#hdrlogo:hover {
+	background: transparent;
+	margin-bottom: -1em;
 }
-#header-links, #subheader-links, #navbar { 
- font: normal 11px Verdana, 'Bitstream Vera Sans', Helvetica, Arial, sans-serif;
- color: #000;
+#header-links, #subheader-links, #navbar {
+	font: normal 11px Verdana, 'Bitstream Vera Sans', Helvetica, Arial, sans-serif;
+	color: #000;
 }
-#header-links, #subheader-links { 
- padding: 0 1em;
- text-align: right; 
+#header-links, #subheader-links {
+	padding: 0 1em;
+	text-align: right;
 }
 #subheader-links a,#header-links a { padding: 0 .5em; }
 
-/* Navbar  */ 
+/* Footer */
 
-#navbar { 
- clear: both;
- border: 1px solid #999;
- background: #eee;
- margin: .15em 0;
+#footer {
+	font-size: 75%;
+	color: #bbb;
+	border-top: 1px solid;
+	padding: .5em 0;
 }
-#navbar-links { float: right }
-a.navbar-link, a.navbar-link-active,a.navbar-link-active:hover { 
- display: block;
- float: left;
- border-left: 1px solid #999;
- border-bottom: none;
- margin: 0;
- padding: .1em 1.5em;
- color: #000;
- background: url(/trac/dots.gif) top left no-repeat;
+#footer a { color: #bbb; }
+#footer-left {
+	float: left;
+	padding: 0 1em;
+	border-left: 1px dashed;
+	border-right: 1px dashed;
 }
-a.navbar-link-active { 
- background: #ccc;
- font-weight: bold;
+#footer-right { text-align: right; }
+#footer-logo {
+	float: left;
+	margin-right: 1em;
+	margin-top: .3em;
+}
+
+/* Navbar  */
+
+#navbar {
+	clear: both;
+	border: 1px solid #999;
+	background: #eee;
+	margin: .15em 0;
+}
+#navbar-links { float: right; }
+a.navbar-link, a.navbar-link-active,a.navbar-link-active:hover {
+	display: block;
+	float: left;
+	border-left: 1px solid #999;
+	border-bottom: none;
+	margin: 0;
+	padding: .1em 1.5em;
+	color: #000;
+	background: url(/trac_common/dots.gif) top left no-repeat;
+}
+a.navbar-link-active {
+	background: #ccc;
+	font-weight: bold;
 }
 a.navbar-link:hover { background-color: #ccb; }
-
-#page-content { 
- clear: both;
-}
+#page-content { clear: both; }
 
 /* Wiki */
 
-#wiki-history { 
- visibility: hidden;
- background: #f7f7f0;
- border: 1px solid #999;
- font-size: 75%;
- position: absolute;
- display: inline;
- margin: 10px;
- right:10px;
- border-collapse: separate;
- border-spacing: 0;
- padding: .5em;
+#wiki-history {
+	visibility: hidden;
+	background: #f7f7f0;
+	border: 1px solid #999;
+	font-size: 75%;
+	position: absolute;
+	display: inline;
+	margin: 10px;
+	right:10px;
+	border-collapse: separate;
+	border-spacing: 0;
+	padding: .5em;
 }
-a.wiki-history-link { 
- display: block;
- border: none;
+a.wiki-history-link {
+	display: block;
+	border: none;
 }
-a.wiki-history-link:hover,tr.wiki-history-row:hover {  
- background: #ccb;
- color: #b00;
+a.wiki-history-link:hover,tr.wiki-history-row:hover {
+	background: #ccb;
+	color: #b00;
 }
 a.wiki-missing-page:link
 {
-  color: #998;
-  background: #fafaf0;
+	color: #998;
+	background: #fafaf0;
 }
 a.wiki-missing-page:hover { color: #000; }
-
-#wiki-body { 
- line-height: 140%;
- margin: 1em;
-}
-
-/* Footer */
-
-#footer { 
- font-size: 75%;
- color: #bbb;
- border-top: 1px solid;
- padding: .5em 0;
-}
-#footer a { color: #bbb }
-#footer-left { 
- float: left; 
- padding: 0 1em;
- border-left: 1px dashed;
- border-right: 1px dashed;
-}
-#footer-right {  text-align: right }
-#footer-logo {
- float: left;
- margin-right: 1em; 
- margin-top: .3em;
+#wiki-body {
+	line-height: 140%;
+	margin: 1em;
 }
 
 /* Browser */
 
-#browser-rev, #log-hdr{ 
- font-size: 110%; 
- margin-right: 1em;
- }
-#browser-chgrev { 
- display: inline;
- margin: 0;
- float: right;
- font-size: 9px;
- width: 15em;
- text-align: right;
+#browser-chgrev {
+	display: inline;
+	margin: 0;
+	float: right;
+	font-size: 9px;
+	width: 15em;
+	text-align: right;
 }
-#browser-chgrev input { text-align: center }
-#browser-pathlinks { 
- padding-bottom: .5em; 
- border-bottom: 1px solid #ccc;
+#browser-chgrev input { text-align: center; }
+#browser-pathlinks {
+	padding-bottom: .5em;
+	border-bottom: 1px solid #ccc;
 }
 #browser-list {
-  clear: both;
-  margin: .5em 0 2em 0;
-  border-bottom: 1px solid #eee;
-  width: 100%;
-  border-collapse: collapse;
-  line-height: 130%;
+	clear: both;
+	margin: .5em 0 2em 0;
+	border-bottom: 1px solid #eee;
+	width: 100%;
+	border-collapse: collapse;
+	line-height: 130%;
 }
 tr.browser-listhdr { border-bottom: 1px solid #eee; }
-tr.browser-listhdr th { 
- text-align: left;
- padding: 0 1em 0 0;
- font-size: 13px;
+tr.browser-listhdr th {
+	text-align: left;
+	padding: 0 1em 0 0;
+	font-size: 13px;
 }
 #browser-list a.block-link { 
-  display: block;
-  border-bottom: none;
-  background: transparent;
+	display: block;
+	border-bottom: none;
+	background: transparent;
 }
-#browser-list td { 
- padding: 0 .5em; 
-
-}
+#browser-list td { padding: 0 .5em; }
 tr.br-row-even, tr.br-row-odd { border-top: 1px solid #ddd; }
 tr.br-row-even { background-color: #fff; }
 tr.br-row-odd { background-color: #f7f7f7; }
 tr.br-row-even:hover,tr.br-row-odd:hover { background: #eed; }
-td.br-size-col,td.br-rev-col,td.br-date-col,td.br-summary-col,td.br-chg-col{ 
- border-left: 1px solid #eee; 
-}
+td.br-size-col,td.br-rev-col,td.br-date-col,td.br-summary-col,td.br-chg-col { border-left: 1px solid #eee; }
 td.br-icon-col { }
-td.br-rev-col, td.br-chg-col { text-align: center }
+td.br-rev-col, td.br-chg-col { text-align: center; }
 td.br-rev-col a { font-weight: bold; }
-td.br-name-col { width: 100% }
-td.br-size-col, td.br-rev-col, td.br-date-col { 
- color: #888; 
- white-space: nowrap;
+td.br-name-col { width: 100%; }
+td.br-size-col, td.br-rev-col, td.br-date-col {
+	color: #888;
+	white-space: nowrap;
 }
 td.br-icon-col, td.br-report-col, td.br-ticket-col { width: 1em; }
-td.br-summary-col { 
- padding-top: 1em;
- font-size: 12px;
+td.br-summary-col {
+	padding-top: 1em;
+	font-size: 12px;
 }
 
 /* Log */
-log-hdr {  
-font-size: 110%;
+
+/* Timeline */
+
+#timeline-prefs {
+	background: #f7f7f0;
+	border: 1px solid #d7d7d7;
+	float: right;
+	font-size: 9px;
+	padding: .5em;
+	margin-left: 1em;
+	margin-bottom: 1em;
 }
+#timeline-prefs-checks { }
+#timeline-prefs-btns {
+	text-align: right;
+	margin-top: 1em;
+}
+.timeline-daysep {
+	font-size: 105%;
+	border-bottom: 1px solid #d7d7d7;
+}
+.tl-item { margin: 1px; font-size: 90%; }
+.tl-item a {
+	border: none;
+	background: url(/trac_common/topangle.gif) top left no-repeat;
+}
+.tl-item a:hover {
+	background-color: #eed;
+	color: #000;
+}
+.tl-item-data { }
+.tl-item-descr {
+	display: block;
+	margin-left: 32px;
+}
+.tl-item-icon {
+	margin-left: 12px;
+	margin-right: 2px;
+}
+.tl-item-time { }
+a.tl-item-chgset {
+ 	display: block;
+	background-color: #ddd;
+	color: #666;
+}
+a.tl-item-newtkt {
+	display: block;
+	background-color: #fba;
+	color: #b00;
+}
+a.tl-item-closedtkt {
+	display: block;
+	background-color: #cec;
+	color: #080;
+}
+a.tl-item-reopentkt {
+	display: block;
+	background-color: #fda;
+	color: #860;
+}
+a.tl-item-wiki {
+	display: block;
+	background-color: #cde;
+	color: #446;
+}
+
+/* Changeset */
+
+.chg-name {
+	display: block;
+	float: left;
+	width: 8em;
+	text-align: right;
+	margin-right: .5em;
+}
+.chg-val { }
+ul.chg-list {
+	padding: .5em;
+	margin-left: 8em;
+	list-style: none;
+}
+.chg-file-comment {
+	display: none;
+	color: #bbb;
+	margin-left: .5em;
+	font-size: 75%;
+}
+.chg-file-add,.chg-file-mod,.chg-file-rem,.diff-legend-unmod,.diff-legend-mod,.diff-legend-add,.diff-legend-rem {
+	display: block;
+	float: left;
+	width: 1em;
+	height: 1em;
+	margin-right: .5em;
+	border: 1px solid #999;
+}
+#chg-diff { 
+	border-top: 1px solid #d7d7d7;
+	margin-bottom: 3em;
+}
+#chg-legend { }
+table.diff-table { 
+	border: 1px solid #d7d7d7; 
+	border-left: 1px solid #999; 
+	border-right: 1px solid #fff; 
+	border-bottom: 1px solid #fff; 
+	width: 100%;
+	font-size: 12px;
+	border-collapse: collapse;
+	margin-left: 1px;
+}
+.chg-diff-file { 
+	background: #eee;
+	padding: 5px;
+	padding-top: 0;
+	margin-top: 2em;
+	border: 1px solid #d7d7d7; 
+}
+.chg-diff-hdr { 
+	font-size: 11px;
+	color: #666; 
+	padding: 2px .25em;
+	border-bottom: 1px solid #999; 
+	margin: 0;
+	margin-bottom: 1px;
+}
+table.diff-table td { 
+	border-left: dashed 1px #d7d7d7;
+	padding: 0 .5em;
+	font-family: monospace;
+	vertical-align: top;
+	margin-top: 1em;
+}
+td.diff-line { 
+	background: #eed;
+	border: 1px solid #d7d7d7;
+	border-top: 1px solid #fff;
+	border-bottom: 1px solid #998;
+	font-weight: bold;
+	font-size: 11px;
+}
+.diff-modified,.chg-file-mod,.diff-legend-mod { background-color: #fd8; }
+.diff-unmodified, .diff-legend-unmod { background-color: #fff }
+.diff-remove-left,.chg-file-rem,.diff-legend-rem { background-color: #f88; }
+.diff-remove-right { background-color: #ffaaaa; }
+.diff-add-left,.chg-file-add { background-color: #dfd; }
+.diff-add-right, .diff-legend-add { background-color: #cfc; }
