--- a/htdocs/css/trac.css
+++ b/htdocs/css/trac.css
@@ -87,7 +87,7 @@ legend {
   font-size: 75%;
   color: #bbb;
   border-top: 1px solid;
-  padding: .5em 0;
+  padding: .25em 0;
 }
 #footer a { color: #bbb; }
 #footer-left {
@@ -97,7 +97,7 @@ legend {
   border-right: 1px dashed;
 }
 #footer-right { text-align: right; }
-#footer-logo { float: left; margin-right: 1em; margin-top: .3em; }
+#footer-logo { float: left; margin-right: 1em; margin-top: 0; }
 
 /* Navbar  */
 #navbar {
